# pySocialWatcher

./: README.md  pyproject.toml  requirements.txt
S05_refugees/: output_quick_start_collection.csv
pysocialwatcher/: constants.py  json_builder.py  main.py  post_process.py  utils.py
pysocialwatcher/input_examples/: quick_example.json
